--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,8 @@ exclude: |
   (l10n_it_fatturapa/data/FoglioStileAssoSoftware_v1.1.xsl)
   # XML tests should not be reformatted
   ^l10n_it_fatturapa_out/tests/data
+  # Do not touch test data
+  l10n_it_fatturapa_in/tests/data/
 default_language_version:
   python: python3
   node: "14.13.0"
@@ -132,6 +134,7 @@ repos:
         args:
           - --rcfile=.pylintrc
           - --exit-zero
+          - --ignore=l10n_it_fatturapa_in/tests/data/
         verbose: true
         additional_dependencies: &pylint_deps
           - pylint-odoo==3.5.0
@@ -139,4 +142,5 @@ repos:
         name: pylint with mandatory checks
         args:
           - --rcfile=.pylintrc-mandatory
+          - --ignore=l10n_it_fatturapa_in/tests/data/
         additional_dependencies: *pylint_deps
