--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,15 @@ exclude: |
   # Repos using Sphinx to generate docs don't need prettying
   ^docs/_templates/.*\.html$|
   # You don't usually want a bot to modify your legal texts
-  (LICENSE.*|COPYING.*)
+  (LICENSE.*|COPYING.*)|
+  # official goverment specs
+  (l10n_it_fatturapa/data/xsd)|
+  # external stylesheets
+  (l10n_it_fatturapa/data/fatturaordinaria_v1.2.1.xsl)|
+  (l10n_it_fatturapa/data/FoglioStileAssoSoftware_v1.1.xsl)|
+  # XML tests should not be reformatted
+  ^l10n_it_fatturapa_out/tests/data|
+  ^l10n_it_fatturapa_out_sp/tests/data
 default_language_version:
   python: python3
   node: "14.13.0"
